1350 - fixed a problem with the next buttons target being wrong because of saved closures; fixed some readability; some optimizations

--- a/drupal/sites/all/modules/custom/features/my_maps_view/css/MyMaps.css
+++ b/drupal/sites/all/modules/custom/features/my_maps_view/css/MyMaps.css
@@ -35,8 +35,8 @@
     float: left;
     height: 17em;
     min-height: 240px;
-    margin-right: 2px;
-    margin-left: 2px;
+    /*margin-right: 2px;*/
+    /*margin-left: 2px;*/
     margin-top: 0.25em;
     background-color: #fff;
     padding: 5px;
